--- a/Validation/Validation.csproj
+++ b/Validation/Validation.csproj
@@ -15,13 +15,25 @@
 Uses validation descriptions instead of attributes or any code inside the model.
 The framework can be used along INotifyDataErrorInfo, but is not strictly necessary.</Description>
 		<Copyright>Copyright (c) Incatechnologies 2022</Copyright>
-		<PackageIcon>Incatechnologies logo.png</PackageIcon>
+		<PackageIcon>Incatechnologies_logo_128x128.png</PackageIcon>
 		<NeutralLanguage>en-001</NeutralLanguage>
 		<PackageReleaseNotes>1.0.0 - Frist release</PackageReleaseNotes>
+		<RepositoryUrl>https://github.com/Matt90hz/WPF-Validation-Framework.git</RepositoryUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageProjectUrl>https://github.com/Matt90hz/WPF-Validation-Framework</PackageProjectUrl>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Include="..\..\..\Incatechnologies\Incatechnologies logo.png">
+	  <None Include="..\..\..\Incatechnologies\Incatechnologies_logo_128x128.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\LICENSE.txt">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\README.md">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
