--- a/Validation/Validation.csproj
+++ b/Validation/Validation.csproj
@@ -22,6 +22,7 @@ The framework can be used along INotifyDataErrorInfo, but is not strictly necess
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageProjectUrl>https://github.com/Matt90hz/WPF-Validation-Framework</PackageProjectUrl>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
