--- a/Validation/Validation.csproj
+++ b/Validation/Validation.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0-windows</TargetFramework>
+		<TargetFramework>net6.0-windows</TargetFramework>
 		<UseWPF>true</UseWPF>
 		<Nullable>enable</Nullable>
 		<PackageId>IncaTechnologies.WPF.Validation</PackageId>
@@ -10,22 +10,25 @@
 		<Company></Company>
 		<Product>WPF Validation Framework</Product>
 		<GenerateDocumentationFile>False</GenerateDocumentationFile>
-		<Version>1.0.0</Version>
+		<Version>1.1.0</Version>
 		<Description>Simple validation framework design to decoupple validation logic form the validated object.
 Uses validation descriptions instead of attributes or any code inside the model.
 The framework can be used along INotifyDataErrorInfo, but is not strictly necessary.</Description>
 		<Copyright>Copyright (c) Incatechnologies 2022</Copyright>
 		<PackageIcon>Incatechnologies_logo_128x128.png</PackageIcon>
-		<NeutralLanguage>en-001</NeutralLanguage>
-		<PackageReleaseNotes>1.0.0 - Frist release</PackageReleaseNotes>
+		<NeutralLanguage>en</NeutralLanguage>
+		<PackageReleaseNotes>1.0.0 - Frist release
+1.1.0 - Fixed critical problem with project reference
+		</PackageReleaseNotes>
 		<RepositoryUrl>https://github.com/Matt90hz/WPF-Validation-Framework.git</RepositoryUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageProjectUrl>https://github.com/Matt90hz/WPF-Validation-Framework</PackageProjectUrl>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
 		<PackageTags>validation,wpf</PackageTags>
 		<AssemblyVersion></AssemblyVersion>
 		<FileVersion></FileVersion>
+		<PackageOutputPath>..\.nupkg</PackageOutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -45,10 +48,6 @@ The framework can be used along INotifyDataErrorInfo, but is not strictly necess
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Descriptions\Descriptions.csproj" />
 	</ItemGroup>
 
 </Project>
